--- a/views/dashVendor/navbarVendor.ejs
+++ b/views/dashVendor/navbarVendor.ejs
@@ -30,7 +30,7 @@
             </a>
             <ul class="dropdown-menu">
                 <li><a href="/vendor/ongoing">Dalam Progress</a></li>
-                <li><a href="#">Dibatalkan</a></li>
+                <li><a href="#">Dibatalkan/Ditolak</a></li>
                 <li><a href="#">Selesai</a></li>
             </ul>
         </li>
