--- a/views/dashAdmin/form_PKS/addPKS.ejs
+++ b/views/dashAdmin/form_PKS/addPKS.ejs
@@ -119,12 +119,12 @@
             <div class="form-step active">
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="nomor_pks">Nomor PKS:</label>
+                        <label for="nomor_pks">Nomor PKS: <span style="color:red">*</span></label>
                         <input type="text" id="nomor_pks" name="nomor_pks" placeholder="Masukkan Nomor PKS"
                             class="small-input">
                     </div>
                     <div class="form-group">
-                        <label for="hari">Hari:</label>
+                        <label for="hari">Hari: <span style="color:red">* </span></label>
                         <select id="hari" name="hari">
                             <option value="">Pilih Hari</option>
                             <option value="Senin">Senin</option>
@@ -140,11 +140,11 @@
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="tanggal">Tanggal:</label>
+                        <label for="tanggal">Tanggal: <span style="color:red">* </span></label>
                         <input type="date" id="tanggal" name="tanggal">
                     </div>
                     <div class="form-group">
-                        <label for="pt_mitra">PT Mitra:</label>
+                        <label for="pt_mitra">PT Mitra: <span style="color:red">* </span></label>
                         <input type="text" id="pt_mitra" name="pt_mitra" placeholder="Masukkan Nama PT Mitra"
                             class="large-input">
                     </div>
@@ -152,13 +152,13 @@
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="kota">Kota:</label>
+                        <label for="kota">Kota: <span style="color:red">* </span></label>
                         <select id="kota" name="kota" class="small-input">
                             <option value="">Pilih Kota</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="nik">NIK:</label>
+                        <label for="nik">NIK: </label>
                         <input type="text" id="nik" name="nik" placeholder="Masukkan NIK Perwakilan"
                             class="small-input">
                     </div>
@@ -166,19 +166,19 @@
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="pihak_mitra">Perwakilan dari Mitra:</label>
+                        <label for="pihak_mitra">Perwakilan dari Mitra: <span style="color:red">* </span></label>
                         <input type="text" id="pihak_mitra" name="pihak_mitra" placeholder="Masukkan Nama Perwakilan"
                             class="large-input">
                     </div>
                     <div class="form-group">
-                        <label for="jabatan">Jabatan:</label>
+                        <label for="jabatan">Jabatan: <span style="color:red">* </span></label>
                         <input type="text" id="jabatan" name="jabatan" placeholder="Masukkan Jabatan Mitra"
                             class="small-input">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group" style="margin-top: -10px;">
-                        <label>Kategori Kerja Sama</label><span id="kategori-error"
+                        <label>Kategori Kerja Sama <span style="color:red">* </span></label><span id="kategori-error"
                             style="color: red; font-size: 12px; display: none;">
                             *Minimal memilih 1
                         </span>
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 <div class="form-group" style="margin-top: -40px;">
-                    <label for="alamat_pks">Alamat:</label>
+                    <label for="alamat_pks">Alamat: <span style="color:red">* </span></label>
                     <input type="text" id="alamat_pks" name="alamat_pks" placeholder="Masukkan Alamat Kantor Mitra"
                         class="large-input">
                 </div>
