--- a/views/dashVendor/produk/tambahProduk.ejs
+++ b/views/dashVendor/produk/tambahProduk.ejs
@@ -162,28 +162,28 @@
   <div id="form-radio" class="form-kategori" style="display: none;">
     <h3>Form Produk Radio</h3>
     <div>
-      <label>Nama Produk:</label>
+      <label>Nama Produk: <span style="color:red">* </span></label>
       <input type="text" name="nama_produk">
     </div>
 
     <div>
-      <label>Foto Produk:</label>
+      <label>Foto Produk: <span style="color:red">* </span></label>
       <input type="file" name="photo_produk" accept="image/*">
     </div>
 
     <div>
-      <label>Deskripsi:</label>
+      <label>Deskripsi: <span style="color:red">* </span></label>
       <textarea name="deskripsi_produk" rows="2"></textarea>
     </div>
 
     <div>
-      <label>Harga:</label>
+      <label>Harga: <span style="color:red">* </span></label>
       <input type="number" name="harga">
     </div>
 
 
     <div>
-      <label>Hari Tayang:</label>
+      <label>Hari Tayang: <span style="color:red">* </span></label>
       <div class="checkbox-group-inline">
         <% ['Senin','Selasa','Rabu','Kamis','Jumat','Sabtu','Minggu'].forEach(hari=> { %>
           <label class="checkbox-inline"><input type="checkbox" name="hari_tayang[]" value="<%= hari %>">
@@ -194,7 +194,7 @@
     </div>
 
     <div>
-      <label>Jam Tayang:</label>
+      <label>Jam Tayang: <span style="color:red">* </span></label>
       <div class="jam-tayang-wrapper">
         <input type="time" name="jam_mulai">
         <span class="sd-label">s/d</span>
@@ -208,27 +208,27 @@
   <div id="form-sms" class="form-kategori" style="display: none;">
     <h3>Form Produk Messaging</h3>
     <div>
-      <label>Nama Produk:</label>
+      <label>Nama Produk: <span style="color:red">* </span></label> 
       <input type="text" name="nama_produk">
     </div>
 
     <div>
-      <label>Foto Produk:</label>
+      <label>Foto Produk: <span style="color:red">* </span></label> 
       <input type="file" name="photo_produk" accept="image/*">
     </div>
 
     <div>
-      <label>Deskripsi:</label>
+      <label>Deskripsi: <span style="color:red">* </span></label>
       <textarea name="deskripsi_produk" rows="2"></textarea>
     </div>
 
     <div>
-      <label>Harga Produk:</label>
+      <label>Harga Produk: <span style="color:red">* </span></label>
       <input type="number" name="harga">
     </div>
 
     <div>
-      <label>Provider yang di layani:</label>
+      <label>Provider yang di layani: <span style="color:red">* </span></label>
       <div class="checkbox-group-inline">
         <% ['Telkomsel','Simpati','XL','Axis','Indosat','Tri','Smartfrend'].forEach(provider=> { %>
           <label class="checkbox-inline"><input type="checkbox" name="provider[]" value="<%= provider %>">
@@ -239,7 +239,7 @@
     </div>
 
     <div>
-      <label>Jenis Target:</label>
+      <label>Jenis Target: <span style="color:red">* </span></label>
       <select name="jenis_target">
         <option value="SMS (Short Message Service)">SMS (Short Message Service)</option>
         <option value="MMS (Multimedia Messaging Service)">MMS (Multimedia Messaging Service)t</option>
